--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Bundle Install
         run: |
           bundle config path ${{ env.GEMS_PATH }}
-          bundle install --jobs 4 --retry 3
+          bundle install --without test test_legacy benchmark
       - name: Check baseurl
         run: |
           baseurl="$(grep '^baseurl:' _config.yml | sed "s/.*: *//;s/['\"]//g;s/#.*//")"
