--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -51,7 +51,8 @@ jobs:
         run: bundle exec jekyll build --source docs --destination docs/_site --verbose --trace
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
-
+        with:
+          path: docs/_site/
   # Deployment job
   deploy:
     environment:
